openshift/service.yaml

apiVersion: v1
kind: Service

metadata:
  name: self-healing-api

spec:
  selector:
    app: self-healing-api

  ports:
    - name: http
      port: 80
      targetPort: 5000
      protocol: TCP

  type: ClusterIP
